--- a/upartner_test/views/index.ejs
+++ b/upartner_test/views/index.ejs
@@ -1,33 +1,33 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
+
+    <% include header %>
+
+    <div class="container">
 
     <% if (about) { %>
-    <h2><%= about %></h2>
+        <h2><%= about %></h2>
     <% } %>
 
-    <!-- ログイン処理 -->
-    <form method="POST" action="/login">
-        <p>Login<input name="user" type="text" size="30" />
-        password<input name="pass" type="password" size="30" />
-        <input type="submit" value="login" /></p>
+    <!-- Main hero unit for a primary marketing message or call to action -->
+    <form class="form-search">
+        <input type="text" class="input-medium search-query">
+        <button type="submit" class="btn">Search</button>
     </form>
-
-    <br>
-    <!-- サインアップ処理 -->
-    <form method="POST" action="/signup">
-        <p>username <input name="username" type="text" size="100" /></p>
-        <p>userid <input name="user" type="text" size="30" /></p>
-        <p>email <input name="email" type="text" size="100" /></p>
-        <p>admin password   <input name="adminpass" type="password" size="30"></p>
-        <p>confirm password <input name="confirmpass" type="password" size="30"></p>
-        <p><input type="submit" value="signup" /></p>
-    </form>
+      
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="span6">
+          <h2>Search</h2>
+          <p></p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+        <div class="span6">
+          <h2>image</h2>
+          <p></p>
+          <p><a class="btn" href="#">View details &raquo;</a></p>
+        </div>
+      </div>
+    
+    <hr>
 
     <!-- talk処理 -->
     <form method="POST" action="/">
@@ -38,5 +38,15 @@
         <p><textarea cols="70" rows="15" name="textarea" ><%= textarea2 %></textarea></p>
     </form>
 
-</body>
-</html>
+    <!-- ユーザ一覧表示 -->
+    <form method="POST" action="/userList">
+            <input name="" type="submit" value="ユーザ一覧" class="btn" />
+    </form>
+
+
+
+
+    <hr>
+
+    <% include footer %>
+ 
